2007-10-13 Takuro Ashie <ashie@homa.ne.jp>

	* intl: Removed.
	* m4/lcmessage.m4, m4/glibc21.m4, m4/gettext.m4, m4/codeset.m4,
	  m4/progtest.m4, m4isc-posix.m4, m4/intltool.m4: Removed.

2007-10-13 Takuro Ashie <ashie@homa.ne.jp>

	* src/intl.h: Removed.
	* plugins/io_stream/gimv_gzip_io.c, plugins/io_stream/gimv_bz_io.c,
	  plugins/thumbnail/konqueror-old.c, plugins/thumbnail/nautilus-2.0.c,
	  plugins/thumbnail/nautilus.c, plugins/thumbnail/ee.c,
	  plugins/thumbnail/xvpics.c, plugins/image_loader/tga.c,
	  plugins/image_view/gimv_xine_priv.h,
	  plugins/thumbnail_view/detailview_prefs.c, src/gimv_elist.c,
	  src/gtk_prop.c, src/menu.c, src/gimv_dlist.c, src/gtkutils.c,
	  src/gfileutil.c, src/gimv_prefs_ui_utils.c, src/Makefile.am,
	  src/prefs_ui/prefs_ui_thumbalbum.c, src/gimv_cell_pixmap.c,
	  src/charset.c, src/gimageview.h:
	intl.h -> glib/gi18n.h

2007-10-13 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac: Fix some warnings.
	* autogen.sh: Remove needless code.
	* m4/libcharset.m4, m4/iconv.m4: Remove.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac: Renamed from configure.in.
	* m4/gdk-pixbuf.m4, m4/gnome.m4, m4/pkg.m4, m4/gtk.m4, m4/imlib.m4,
	  m4/libtool.m4: Removed needless files.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/archiver/zip-ext.c, plugins/archiver/lha-ext.c,
	  plugins/archiver/rar-ext.c, plugins/archiver/tar-ext.c,
	  plugins/image_view/gimv_xine.c, plugins/image_view/gimv_xine_priv.h,
	  plugins/image_view/gimv_mplayer.c:
	Use G_DEFINE_TYPE.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_thumb.c, src/gimv_elist.c, src/gimv_image_win.c,
	  src/gimv_comment.c, src/gimv_image_loader.c, src/gimv_dlist.c,
	  src/gimv_image.c, src/fr-command.c, src/gimv_dupl_win.c,
	  src/gimv_thumb_win.c, src/gimv_thumb_view.c, src/gimv_dupl_finder.c,
	  src/gimv_cell_pixmap.c, src/gimv_nav_win.c, src/fr-archive.c,
	  src/gimv_image_view.c, src/gimv_anim.c, src/gimv_zlist.c,