@@ -1,5 +1,11 @@
 2007-10-13 Takuro Ashie <ashie@homa.ne.jp>
 
+	* Makefile.am, autogen.sh, configure.ac, po/Makefile.in.in,
+	  src/Makefile.am, src/gimageview.c:
+	glib-gettextize.
+
+2007-10-13 Takuro Ashie <ashie@homa.ne.jp>
+
 	* intl: Removed.
 	* m4/lcmessage.m4, m4/glibc21.m4, m4/gettext.m4, m4/codeset.m4,
 	  m4/progtest.m4, m4isc-posix.m4, m4/intltool.m4: Removed.
